# android-restriction-bypass

./: README.md  re.android.hiddenapi.apk
src/: .project  build.gradle
src/app/: CMakeLists.txt  build.gradle  keystore.jks
src/app/cmake/: fake-aosp.cmake  lief.cmake
src/app/libs/android-9.0.0/aarch64/: README.md
src/app/src/androidTest/java/re/android/hiddenapi/: ExampleInstrumentedTest.java
src/app/src/main/: AndroidManifest.xml
src/app/src/main/cpp/: hidden-api-bypass.cpp  hidden-api-bypass.hpp
src/app/src/main/java/re/android/hiddenapi/: MainActivity.java
src/app/src/main/res/layout/: activity_main.xml
src/app/src/main/res/values/: strings.xml
src/app/src/test/java/re/android/hiddenapi/: ExampleUnitTest.java
